# CppProjects

./: .gitignore
BoostTestExample/: CMakeLists.txt  main.cpp  suiteTwo.cpp
MusicCipher/: .gitignore  Decoder.cpp  Decoder.hpp  IntervalKeyParser.cpp  IntervalKeyParser.hpp  MusicCipher.pro  Octave.cpp  Octave.hpp  OctaveKeysParser.cpp  OctaveKeysParser.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  sample_data.txt
MusicCipher_unittests/: CMakeLists.txt  OctaveKeysParser_unittests.cpp  Octave_unittests.cpp  main.cpp
TLS_EcoPlanner/: .gitignore  CMakeLists.txt  PCH.hpp  game_data.xsd  main.cpp  mainwindow.cpp  plan_schema.xsd
TLS_EcoPlanner/buildings/: GoldMine.cpp  GoldMine.hpp  House.cpp  House.hpp  Ruins.cpp  Ruins.hpp  Shop.cpp  Shop.hpp
TLS_EcoPlanner/game_data/: GameData.cpp  GameData.hpp  GameDataXml.hpp  ReadGameDataFromXml.cpp  WriteGameDataToXml.cpp
TLS_EcoPlanner/history/: History.cpp  History.hpp  HistoryModel.cpp  HistoryModel.hpp  HistoryResetColumnDelegate.cpp  HistoryResetColumnDelegate.hpp  HistorySerialization.cpp  HistorySerialization.hpp
TLS_EcoPlanner/history/action/: DayStartAction.cpp  DayStartAction.hpp  HistoryAction.cpp  HistoryAction.hpp  HouseActions.cpp  HouseActions.hpp  MineActions.cpp  MineActions.hpp  RuinsActions.cpp  RuinsActions.hpp  ShopActions.cpp  ShopActions.hpp
TLS_EcoPlanner/resources/: icons.qrc
TLS_EcoPlanner/source/: Controller.cpp  Controller.hpp  FileOperations.cpp  FileOperations.hpp  Message.hpp  Misc.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
TLS_EcoPlanner/stage/: Stage.cpp  Stage.hpp  StageModel.cpp  StageModel.hpp
ceePlusPlus/: CMakeLists.txt  main.cpp  noisy_type.hpp  shared_ptr.cpp
helloWorldVcpkg/: CMakeLists.txt  main.cpp  vcpkg.json
